# Alpha-KD

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  application.properties  flagged_tickers.json  pyproject.toml  requierements.txt  requirements.txt  telemetry.jsonl
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
Data/: AAPL_1d_5d.csv  AAPL_1h_1d.csv  AAPL_1h_1mo.csv  AAPL_1h_5d.csv  HighLowTime.py  MSFT_1h_1d.csv  MSFT_1h_1mo.csv  MSFT_1h_5d.csv  NVDA_1h_1d.csv  NVDA_1h_1mo.csv  NVDA_1h_5d.csv  create_databases.py
DenoisingData/: final_denoised_signal.csv  parameter_tuner.py  performance_evaluator.py  signal_plotter.py  signal_processor.py  wavelet_transform_main.py
Down side test/: Nifty 50 Historical Data.csv  test.py
Launching (CPCV)/: Launching_CPCV_LI_2023_02_BinLogReg.py  Launching_CPCV_LI_2023_02_Ichimoku_1.py  Launching_CPCV_LI_2023_02_LinSvcQuantile.py  Launching_CPCV_LI_2023_02_RsiSma.py  Launching_CPCV_LI_2023_02_RsiSmaAtr.py  Launching_CPCV_LI_2023_02_StoRsiAtr.py  Launching_CPCV_LI_2023_02_TreePcaQuantile.py
Launching (MC)/: Launching_MC_LI_2023_02_BinLogReg.py  Launching_MC_LI_2023_02_Ichimoku_1.py  Launching_MC_LI_2023_02_LinSvcQuantile.py  Launching_MC_LI_2023_02_RsiSma.py  Launching_MC_LI_2023_02_RsiSmaAtr.py  Launching_MC_LI_2023_02_StoRsiAtr.py  Launching_MC_LI_2023_02_TreePcaQuantile.py
Launching (WFO)/: CCI_WFO.py  DPO_WFO.py  Launching_LI_2023_02_BinLogReg.py  Launching_LI_2023_02_Ichimoku_1.py  Launching_LI_2023_02_LinSvcQuantile.py  Launching_LI_2023_02_RsiSma.py  (+4 more)
(+413 files in other folders)
