[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alpha-kd"
version = "0.1.0"
description = "Alpha-KD quantitative trading system"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "ta",
    "hmmlearn",
    "statsmodels",
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_kd*"]
