[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-kd"
version = "0.1.0"
description = "Alpha-KD quantitative trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pandas>=1.5.3",
    "numpy>=1.22.0",
    "scikit-learn>=1.2.2",
    "matplotlib",
    "ta",
    "hmmlearn",
    "statsmodels",
    "requests",
    "python-dotenv",
    "yfinance>=0.2.54",
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff>=0.1.0",
    "httpx",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/src/alpha_kd/ui/frontend/node_modules",
  "/src/alpha_kd/ui/frontend/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_kd"]
exclude = [
  "/src/alpha_kd/ui/frontend/node_modules",
  "/src/alpha_kd/ui/frontend/dist",
]
